testsuite/tests/parser/should_fail/T3095.stderr

T3095.hs:7:12: error:
    Illegal symbol ‘forall’ in type
    Perhaps you intended to use RankNTypes or a similar language
    extension to enable explicit-forall syntax: forall <tvs>. <type>

T3095.hs:7:12: error:
    Unexpected type ‘forall x. x :: Type’
    In the class declaration for ‘Bla’
    A class declaration should have form
      class Bla a where ...
